# azcam-console

./: README.md  pyproject.toml
azcam_console/: __init__.py  __main__.py  api.py  cli.py  console.py  console_mock.py  database_console.py  parameters_console.py  plot.py  server_comm.py  shortcuts.py  start.py  utils.py
azcam_console/observe/: __main__.py  observe_common.py
azcam_console/observe/observe_cli/: observe_cli.py
azcam_console/observe/observe_qt/: observe_qt.py
azcam_console/scripts/: __init__.py  centroids.py  display_files.py  get_pressures.py  get_temperatures.py  plot_header_times.py  plot_images.py  plot_log_temps.py  show_sequence_keywords.py  show_sequence_stats.py  test_communications.py  test_controller.py  test_filters.py  test_wavelengths.py  threshold_image.py
azcam_console/testers/: basetester.py  bias.py  dark.py  defects.py  detcal.py  detchar.py  eper.py  fe55.py  gain.py  gainmap.py  linearity.py  metrology.py  pocketpump.py  prnu.py  ptc.py  qe.py  ramp.py  superflat.py
azcam_console/tools/: __init__.py  console_arc.py  console_archon.py  console_tools.py  controller.py  ds9display.py  exposure.py  focus.py  instrument.py  telescope.py  tempcon.py
azcam_console/tools/testers/: basetester.py  bias.py  dark.py  defects.py  detcal.py  detchar.py  eper.py  fe55.py  gain.py  linearity.py  metrology.py  pocketpump.py  prnu.py  ptc.py  qe.py  ramp.py  superflat.py
docs/: make_pdoc3.bat  mkdocs.yml  readme.md  requirements.txt
docs/code/azcam_console/: cli.html  database_console.html  index.html  shortcuts.html
docs/code/azcam_console/scripts/: index.html
docs/docs/: index.md
docs/docs/autocode/: controller_console.md
support/: start_console_example.py  start_observe.bat
(+28 files in other folders)
