[project]
name = "azcam-console"
version = "23.1"
description = "Console application for the AzCam acquisition and analysis package"
license = {file ="LICENSE"}
readme = "README.md"
keywords=["ccd", "imaging", "astronomy", "sensors"]
authors = [{name="Michael Lesser"},{email = "mlesser@arizona.edu"}]
dependencies = [
    "numpy",
    "matplotlib",
    "astropy",
    "pdfkit",
    "markdown",
    "pypdf2",
]

[tool.flit.module]
name = "azcam_console"

[project.urls]
Documentation = "https://mplesser.github.io/azcam/"
Repository = "https://github.com/mplesser/azcam/"

[project.scripts]
azcamconsole = "azcam_console.start:start"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
