[project]
name = "azcam-console"
version = "24.2.0"
description = "Acquisition and analysis package for scientific imaging"
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["ccd", "imaging", "astronomy", "sensors"]
authors = [{ name = "Michael Lesser" }, { email = "mlesser@arizona.edu" }]
dependencies = [
    "azcam",
    "loguru",
    "numpy",
    "astropy",
    "matplotlib",
    "pyside6",
    "pdfkit",
    "markdown",
    "pypdf",
    "pywin32; sys_platform == 'win32'",
    "mkdocstrings[python]>=0.18",
]
requires-python = ">= 3.10"

[project.urls]
Documentation = "https://azcam.readthedocs.io/"
Repository = "https://github.com/mplesser/azcam-console/"

[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "azcam_console"

[project.scripts]
azcamobserve = "azcam_console.observe.__main__:main"
